[package]
name = "sudo-askpass"
version = "2.2.0"
edition = "2021"
description = "A sudo askpasss so inputting your password isn't boring"
readme = "README.md"
homepage = "https://github.com/absolpega/sudo-askpass"
repository = "https://github.com/absolpega/sudo-askpass"
license = "MIT"
keywords = ["sudo", "askpass", "cli", "password"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "authentication",
]

[dependencies]
ansi-escapes = "0.1.1"
clap = { version = "4.3.10", features = ["derive"] }
colored = "2.0.4"
inquire = "0.6.2"
read_char = "0.1.1"
serde = { version = "1.0.166", features = ["derive"] }
serde_yaml = "0.9.22"
termios = "0.3.3"
xdg = "2.5.0"
